--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "remove-asset-prefix": "node scripts/remove-asset-prefix.mjs"
   },
   "dependencies": {
+    "@bundlr-network/client": "0.9.11",
     "@fontsource/inter": "4.5.14",
     "@radix-ui/colors": "0.1.8",
     "@radix-ui/react-dialog": "1.0.2",
@@ -23,6 +24,7 @@
     "@radix-ui/react-switch": "1.0.1",
     "@radix-ui/react-tooltip": "1.0.2",
     "@stitches/react": "1.2.8",
+    "@permaweb/asset-sdk": "https://arweave.net/Nx7ryAvP_cr8KLRAyZRYvSMbLzFiGdLxt9vqBy1k45Y",
     "@visx/gradient": "2.10.0",
     "@visx/group": "2.10.0",
     "@visx/hierarchy": "2.10.0",
@@ -35,7 +37,9 @@
     "next": "12.3.0",
     "next-themes": "0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-zoom-pan-pinch": "2.1.3",
+    "warp-contracts": "1.2.39"
   },
   "devDependencies": {
     "@types/node": "18.11.13",
@@ -46,5 +50,10 @@
     "arweave-wallet-connector": "0.0.31",
     "prettier": "2.8.1",
     "typescript": "4.6.4"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "react-zoom-pan-pinch@2.1.3": "patches/react-zoom-pan-pinch@2.1.3.patch"
+    }
   }
 }
