feat: :sparkles: basic working version

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@bundlr-network/client": "0.9.11",
     "@fontsource/inter": "4.5.14",
     "@permaweb/asset-graph": "https://arweave.net/-jYaU7HYX3JNpsOTqkMzEKUK4_5Mfy-a88jtgSNrI_k",
-    "@permaweb/asset-sdk": "https://arweave.net/Nx7ryAvP_cr8KLRAyZRYvSMbLzFiGdLxt9vqBy1k45Y",
+    "@permaweb/asset-sdk": "https://arweave.net/6EufX9daGYA6tqv1WK900FQLy0JHta2PdMIutTh3t4g",
     "@radix-ui/colors": "0.1.8",
     "@radix-ui/react-dialog": "1.0.2",
     "@radix-ui/react-icons": "1.1.1",
@@ -34,6 +34,7 @@
     "@visx/shape": "2.12.2",
     "arweave": "1.11.8",
     "arweave-graphql": "0.0.5",
+    "date-fns": "2.29.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "formik": "2.2.9",
