--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "pnpm add-asset-prefix",
-    "postbuild": "pnpm remove-asset-prefix",
+    "prebuild": "rm -rf out-* && node scripts/add-asset-prefix",
+    "postbuild": "node scripts/remove-asset-prefix",
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf node_modules out",
     "fund-bundlr": "arkb fund-bundler --wallet ./wallet.json --use-bundler https://node2.bundlr.network",
-    "deploy": "arkb deploy out --use-bundler https://node2.bundlr.network --wallet ./wallet.json",
-    "add-asset-prefix": "node scripts/add-asset-prefix.mjs",
-    "remove-asset-prefix": "node scripts/remove-asset-prefix.mjs"
+    "deploy": "arkb deploy out --use-bundler https://node2.bundlr.network --wallet ./wallet.json"
   },
   "dependencies": {
     "@aura-ui/react": "0.0.3-alpha.5",
@@ -42,6 +40,7 @@
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.7.1",
     "react-zoom-pan-pinch": "2.1.3",
     "ts-node": "10.9.1",
     "warp-contracts": "1.2.39"
