refactor: updated asset-sdk to asset-web-sdk

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@bundlr-network/client": "0.9.11",
     "@fontsource/inter": "4.5.14",
     "@permaweb/asset-graph": "https://arweave.net/-jYaU7HYX3JNpsOTqkMzEKUK4_5Mfy-a88jtgSNrI_k",
-    "@permaweb/asset-sdk": "https://arweave.net/6EufX9daGYA6tqv1WK900FQLy0JHta2PdMIutTh3t4g",
+    "@permaweb/asset-web-sdk": "^0.0.2",
     "@radix-ui/colors": "0.1.8",
     "@radix-ui/react-dialog": "1.0.2",
     "@radix-ui/react-icons": "1.1.1",
@@ -32,12 +32,14 @@
     "@visx/shape": "2.12.2",
     "arweave": "1.11.8",
     "arweave-graphql": "0.0.5",
+    "crocks": "^0.12.4",
     "date-fns": "2.29.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "formik": "2.2.9",
     "next": "12.3.0",
     "next-themes": "0.2.1",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
