--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "deploy": "arkb deploy out --use-bundler https://node2.bundlr.network --wallet ./wallet.json"
   },
   "dependencies": {
-    "@aura-ui/react": "0.0.3-alpha.5",
+    "@aura-ui/react": "0.0.5-alpha.2",
     "@bundlr-network/client": "0.9.11",
     "@fontsource/inter": "4.5.14",
     "@permaweb/asset-graph": "https://arweave.net/-jYaU7HYX3JNpsOTqkMzEKUK4_5Mfy-a88jtgSNrI_k",
@@ -32,7 +32,9 @@
     "@visx/responsive": "2.10.0",
     "@visx/shape": "2.12.2",
     "arweave": "1.11.8",
+    "arweave-account": "1.3.4",
     "arweave-graphql": "0.0.5",
+    "arweave-wallet-ui-test": "0.0.11",
     "crocks": "^0.12.4",
     "date-fns": "2.29.3",
     "eslint": "8.29.0",
