--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/colors": "0.1.8",
     "@radix-ui/react-dialog": "1.0.2",
     "@radix-ui/react-icons": "1.1.1",
+    "@radix-ui/react-popover": "1.0.5",
     "@radix-ui/react-switch": "1.0.1",
     "@radix-ui/react-tooltip": "1.0.2",
     "@stitches/react": "1.2.8",
