--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "rm -rf out-* && node scripts/add-asset-prefix",
-    "postbuild": "node scripts/remove-asset-prefix",
-    "build": "next build && next export",
+    "prebuild": "node scripts/add-asset-prefix.mjs",
+    "postbuild": "node scripts/remove-asset-prefix.mjs && prettier --write './next.config.js'",
+    "build": "pnpm prebuild && next build && next export && pnpm postbuild",
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf node_modules out",
-    "fund-bundlr": "arkb fund-bundler --wallet ./wallet.json --use-bundler https://node2.bundlr.network",
-    "deploy": "arkb deploy out --use-bundler https://node2.bundlr.network --wallet ./wallet.json"
+    "upload": "pnpm build && node deploy.mjs"
   },
   "dependencies": {
     "@aura-ui/react": "0.0.5-alpha.2",
-    "@bundlr-network/client": "0.9.11",
+    "@bundlr-network/client": "0.11.1",
     "@fontsource/inter": "4.5.14",
     "@permaweb/asset-graph": "https://arweave.net/-jYaU7HYX3JNpsOTqkMzEKUK4_5Mfy-a88jtgSNrI_k",
     "@permaweb/asset-web-sdk": "0.0.4",
@@ -47,19 +46,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
+    "react-router-dom": "6.11.2",
     "react-zoom-pan-pinch": "2.1.3",
-    "ts-node": "10.9.1",
     "warp-contracts": "1.4.8"
   },
   "devDependencies": {
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "arkb": "1.1.61",
     "arlocal": "1.1.59",
     "arweave-wallet-connector": "0.0.31",
     "prettier": "2.8.1",
-    "typescript": "4.6.4"
+    "ts-node": "10.9.1",
+    "typescript": "4.7.4"
   },
   "pnpm": {
     "patchedDependencies": {
