chore: install react query

--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "@permaweb/asset-web-sdk": "0.0.4",
     "@permaweb/stampjs": "0.2.2",
     "@radix-ui/colors": "0.1.8",
-    "@radix-ui/react-dialog": "1.0.2",
     "@radix-ui/react-icons": "1.1.1",
     "@radix-ui/react-popover": "1.0.5",
-    "@radix-ui/react-switch": "1.0.1",
-    "@radix-ui/react-tooltip": "1.0.2",
     "@stitches/react": "1.2.8",
+    "@tanstack/react-query": "4.28.0",
     "@visx/gradient": "2.10.0",
     "@visx/group": "2.10.0",
     "@visx/hierarchy": "2.10.0",
@@ -42,7 +40,6 @@
     "formik": "2.2.9",
     "next": "12.3.0",
     "next-themes": "0.2.1",
-    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
