--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "4.7.1",
     "react-router-dom": "6.11.2",
     "react-zoom-pan-pinch": "2.1.3",
+    "vouchdao": "0.2.6",
     "warp-contracts": "1.4.8"
   },
   "devDependencies": {
