--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "formik": "2.2.9",
+    "motion": "10.15.5",
+    "motion-hooks": "0.1.1",
     "next": "12.3.0",
     "next-themes": "0.2.1",
     "react": "18.2.0",
