--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,24 +15,24 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
+    "incremental": false,
     "typeRoots": [
       "./index.d.ts",
       "./node_modules/@types"
-    ]
+    ],
+    "isolatedModules": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "scripts/asset-prefix.js",
-    "index.d.ts"
-    // "lib/asset-sdk.ts"
+    "index.d.ts",
+    "deploy.js" // "lib/asset-sdk.ts"
   ],
   "exclude": [
     "node_modules",
-    "deploy.ts"
+    "deploy.js"
   ]
 }
